# ctetris-2

./: .gitignore  BUILD_SUMMARY.md  change.md  log-native.txt  log-wasm.txt  patch.md  taskConsole.md  taskCore.md  taskStory.md
.github/workflows/: deploy-cloudflare.yml  deploy-pages.yml  sync-chapters.yml  test-build.yml
api/: apiTree.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.json
api/migrations/: best-only-upsert.sql  sync-board.sql
api/src/: index.ts
app/: .env  CMakeLists.txt  LOGGER_USAGE.md  appTree.md  build.ps1  build.sh  env  log.txt  main.cpp
app/brandkit/: logo.icns
app/chapters/c001/: c001.md  c001.sql  gameRoute.md
app/emscripten/: shell.html
app/gameCore/: app.cpp
app/src/: ctetris_debug.h  logger.h
app/src/gameConsole/: CMakeLists.txt  app.cpp  build.sh  gameConsole_board.json  task.md
app/src/gameConsole/include/: gameConsole_bg_svg.h  gameConsole_db.h  gameConsole_layout.h  gameConsole_sort.h  layout.h
app/src/gameCore/: CMakeLists.txt  app.cpp  build.sh  task.md
app/src/gameCore/include/: gameCore_layout.h  layout.h
app/src/gameStory/: CMakeLists.txt  app.cpp  build.sh  task.md
app/src/gameStory/include/: gameStory_corp_svg.h  gameStory_db.h  gameStory_font.h  gameStory_layout.h  gameStory_logo_svg.h  layout.h
app/src/shared/: nanosvg_impl.cpp
app/src/shared/include/: layout.h
app/src/shared/include/SFML/: Audio.hpp  Graphics.hpp
app/web/: manifest.webmanifest  shell.html  sw.js
chapters/: chaptersTree.md  manifest.json
chapters/c001/: c001.json  c001.md
chapters/prompts/: c001.md  json.md
chapters/scripts/: build_manifest.py  parse.py
chapters/src/c001/: c001.json  c001.sql
doc/: docTree.md  main.tex  slide.tex
doc/assets/tikz/: diagrams-appendix-part4.tex  diagrams-part1.tex  diagrams-part2.tex  diagrams-part3.tex  diagrams-part4.tex  diagrams-part6.tex  diagrams-part7.tex  diagrams-slide-part1.tex  diagrams-slide-part2.tex  diagrams-slide-part3.tex  diagrams-slide-part4.tex  diagrams-slide-part5.tex  diagrams-slide.tex
doc/src/: appendix.tex  content.tex  cover.tex
doc/src/appendix/: 01-teamContract.tex  02-teamContractValidation.tex  03-meetingMinute.tex  04-teamConflictSolving.tex
doc/src/content/: 00-Appendix.tex  00-References.tex  01-Preface.tex  02-gameRequirements.tex  02-gameStoryRequirements.tex  03-gameConsoleRequirements.tex  03-gameEngineering.tex  04-gameCoreRequirements.tex  04-gameGuide.tex  04-teamConflictSolving.tex  05-gameStoryEngineering.tex  05-gameTest.tex  06-gameConsoleEngineering.tex  06-gameMilestones.tex  07-gameCoreEngineering.tex  07-gameTechnologies.tex  08-gameSkills.tex  08-gameStoryGuide.tex  09-gameConsoleGuide.tex  10-gameCoreGuide.tex  11-testStrategy.tex  12-testList.tex  13-productMilestones.tex  14-projectGanttChart.tex  15-technologyAdoption.tex  16-toolsetList.tex  17-skillsetList.tex
doc/src/libs/: body.tex  footer.tex  header.tex  index.tex
